--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/Cheese Omelette.html">Cheese Omelette</a>
+    <img src="https://media.giphy.com/media/12lL9jqB0Ogx2w/giphy.gif">
+   <br> <a href="../odin-recipes/recipes/Cheese Omelette.html">Cheese Omelette</a>
 </body>
 </html>
